--- a/src/R/pcgrr2/inst/templates/bibliography.bib
+++ b/src/R/pcgrr2/inst/templates/bibliography.bib
@@ -1,3 +1,122 @@
+
+@ARTICLE{Cortes-Ciriano2017-vl,
+  title       = "A molecular portrait of microsatellite instability across
+                 multiple cancers",
+  author      = "Cortes-Ciriano, Isidro and Lee, Sejoon and Park, Woong-Yang
+                 and Kim, Tae-Min and Park, Peter J",
+  affiliation = "Department of Biomedical Informatics, Harvard Medical School,
+                 Boston, Massachusetts 02115, USA. Ludwig Center at Harvard,
+                 Boston, Massachusetts 02115, USA. Samsung Genome Institute,
+                 Samsung Medical Center, Seoul 06351, South Korea. Samsung
+                 Genome Institute, Samsung Medical Center, Seoul 06351, South
+                 Korea. Department of Medical Informatics and Catholic Cancer
+                 Research Institute, College of Medicine, The Catholic
+                 University of Korea, Seoul 06591, South Korea. Department of
+                 Biomedical Informatics, Harvard Medical School, Boston,
+                 Massachusetts 02115, USA. Ludwig Center at Harvard, Boston,
+                 Massachusetts 02115, USA.",
+  abstract    = "Microsatellite instability (MSI) refers to the hypermutability
+                 of short repetitive sequences in the genome caused by impaired
+                 DNA mismatch repair. Although MSI has been studied for
+                 decades, large amounts of sequencing data now available allows
+                 us to examine the molecular fingerprints of MSI in greater
+                 detail. Here, we analyse ∼8,000 exomes and ∼1,000 whole
+                 genomes of cancer patients across 23 cancer types. Our
+                 analysis reveals that the frequency of MSI events is highly
+                 variable within and across tumour types. We also identify
+                 genes in DNA repair and oncogenic pathways recurrently subject
+                 to MSI and uncover non-coding loci that frequently display
+                 MSI. Finally, we propose a highly accurate exome-based
+                 predictive model for the MSI phenotype. These results advance
+                 our understanding of the genomic drivers and consequences of
+                 MSI, and our comprehensive catalogue of tumour-type-specific
+                 MSI loci will enable panel-based MSI testing to identify
+                 patients who are likely to benefit from immunotherapy.",
+  journal     = "Nat. Commun.",
+  volume      =  8,
+  pages       = "15180",
+  month       =  "6~" # jun,
+  year        =  2017,
+  language    = "en"
+}
+
+@ARTICLE{Ritter2016-by,
+  title       = "Somatic cancer variant curation and harmonization through
+                 consensus minimum variant level data",
+  author      = "Ritter, Deborah I and Roychowdhury, Sameek and Roy, Angshumoy
+                 and Rao, Shruti and Landrum, Melissa J and Sonkin, Dmitriy and
+                 Shekar, Mamatha and Davis, Caleb F and Hart, Reece K and
+                 Micheel, Christine and Weaver, Meredith and Van Allen, Eliezer
+                 M and Parsons, Donald W and McLeod, Howard L and Watson,
+                 Michael S and Plon, Sharon E and Kulkarni, Shashikant and
+                 Madhavan, Subha and {ClinGen Somatic Cancer Working Group}",
+  affiliation = "Baylor College of Medicine and Texas Children's Hospital,
+                 Houston, TX, USA. Ohio State University, Columbus, OH, USA.
+                 Baylor College of Medicine and Texas Children's Hospital,
+                 Houston, TX, USA. Innovation Center for Biomedical Informatics
+                 and Lombardi Comprehensive Cancer Center, Georgetown
+                 University Medical Center, Washington, DC, USA. National
+                 Center for Biotechnology Information, Bethesda, MD, USA.
+                 National Cancer Institute, Rockville, MD, USA. Illumina, San
+                 Diego, CA, USA. MolecularMatch, Houston, TX, USA. Invitae, San
+                 Francisco, CA, USA. Vanderbilt University School of Medicine,
+                 Nashville, TN, USA. American College of Medical Genetics and
+                 Genomics, Bethesda, MD, USA. Dana-Farber Cancer Institute,
+                 Boston, MA, USA. Baylor College of Medicine and Texas
+                 Children's Hospital, Houston, TX, USA. Moffitt Cancer Center,
+                 Tampa, FL, USA. American College of Medical Genetics and
+                 Genomics, Bethesda, MD, USA. Baylor College of Medicine and
+                 Texas Children's Hospital, Houston, TX, USA. Baylor College of
+                 Medicine and Texas Children's Hospital, Houston, TX, USA.
+                 Innovation Center for Biomedical Informatics and Lombardi
+                 Comprehensive Cancer Center, Georgetown University Medical
+                 Center, Washington, DC, USA. sm696@georgetown.edu.",
+  abstract    = "BACKGROUND: To truly achieve personalized medicine in
+                 oncology, it is critical to catalog and curate cancer sequence
+                 variants for their clinical relevance. The Somatic Working
+                 Group (WG) of the Clinical Genome Resource (ClinGen), in
+                 cooperation with ClinVar and multiple cancer variant curation
+                 stakeholders, has developed a consensus set of minimal variant
+                 level data (MVLD). MVLD is a framework of standardized data
+                 elements to curate cancer variants for clinical utility. With
+                 implementation of MVLD standards, and in a working partnership
+                 with ClinVar, we aim to streamline the somatic variant
+                 curation efforts in the community and reduce redundancy and
+                 time burden for the interpretation of cancer variants in
+                 clinical practice. METHODS: We developed MVLD through a
+                 consensus approach by i) reviewing clinical actionability
+                 interpretations from institutions participating in the WG, ii)
+                 conducting extensive literature search of clinical somatic
+                 interpretation schemas, and iii) survey of cancer variant web
+                 portals. A forthcoming guideline on cancer variant
+                 interpretation, from the Association of Molecular Pathology
+                 (AMP), can be incorporated into MVLD. RESULTS: Along with
+                 harmonizing standardized terminology for allele interpretive
+                 and descriptive fields that are collected by many databases,
+                 the MVLD includes unique fields for cancer variants such as
+                 Biomarker Class, Therapeutic Context and Effect. In addition,
+                 MVLD includes recommendations for controlled semantics and
+                 ontologies. The Somatic WG is collaborating with ClinVar to
+                 evaluate MVLD use for somatic variant submissions. ClinVar is
+                 an open and centralized repository where sequencing
+                 laboratories can report summary-level variant data with
+                 clinical significance, and ClinVar accepts cancer variant
+                 data. CONCLUSIONS: We expect the use of the MVLD to streamline
+                 clinical interpretation of cancer variants, enhance
+                 interoperability among multiple redundant curation efforts,
+                 and increase submission of somatic variants to ClinVar, all of
+                 which will enhance translation to clinical oncology practice.",
+  journal     = "Genome Med.",
+  volume      =  8,
+  number      =  1,
+  pages       = "117",
+  month       =  "4~" # nov,
+  year        =  2016,
+  keywords    = "Cancer genomics; Data standard; Somatic variant curation;
+                 Somatic variant interpretation",
+  language    = "en"
+}
+
 @ARTICLE{Rosenthal2016-cn,
   title       = "deconstructSigs: delineating mutational processes in single
                  tumors distinguishes {DNA} repair deficiencies and patterns of
