--- a/src/R/pcgrr2/inst/templates/data_sources.Rmd
+++ b/src/R/pcgrr2/inst/templates/data_sources.Rmd
@@ -1,3 +1,5 @@
+## Annotation sources
+
 The annotated variants are based on the following underlying tools and knowledge resources:
 
 * [VEP v85](http://www.ensembl.org/info/docs/tools/vep/index.html) - Variant Effect Predictor release 85 ([GENCODE v19](https://www.gencodegenes.org/releases/19.html) as the gene reference dataset)
